# rmonitor

./: .gitignore  Cargo.toml  LICENSE  README.md  build.ps1  build.sh  config.default.toml
.cargo/: config.toml
src/: app.rs  config.rs  main.rs  state.rs  store.rs
src/core/: app.rs  config.rs  mod.rs  state.rs  store.rs
src/modules/: mod.rs
src/modules/docker/: mod.rs  panel.rs  provider.rs
src/modules/network/: mod.rs  provider.rs
src/modules/security/: alerts.rs  connection_tracker.rs  mod.rs  panel.rs  unix.rs  windows.rs
src/modules/system/: cpu.rs  history.rs  history_panel.rs  memory.rs  metrics.rs  mod.rs  processes.rs
src/providers/: docker.rs  metrics.rs  mod.rs  network.rs  unix_connection.rs  windows_connection.rs
src/shared/: fmt.rs  header.rs  mod.rs  settings.rs
src/ui/: alert_toast.rs  cpu_panel.rs  docker_panel.rs  header.rs  memory_panel.rs  mod.rs  security_panel.rs  settings_panel.rs
