[package]
name = "rmonitor"
version = "0.1.0"
edition = "2021"
description = "rmonitor — High-performance cross-platform System & SSH/RDP Monitor TUI"
license = "MIT"

[dependencies]
# TUI rendering
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# System metrics (CPU, Memory, Disk)
sysinfo = "0.33"

# Networking — public IP fetch, GeoIP lookups
reqwest = { version = "0.12", features = ["json"] }

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Regex for log parsing (Linux auth.log)
regex = "1"

# Hostname resolution
hostname = "0.4"

# Local IP detection
local-ip-address = "0.6"

# LRU cache for GeoIP memoization
lru = "0.12"

# Async trait support
async-trait = "0.1"

# Directory paths for config
dirs = "5"
futures-util = "0.3"
bollard = "0.18"

# Linux system calls (UID check)
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

# Docker API client
bollard = "0.18"

# Stream utilities for Docker stats
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.57", features = [
    "Win32_Foundation",
    "Win32_System_EventLog",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_RemoteDesktop",
] }

[profile.release]
opt-level = 3
lto = "thin"          # Faster than "true" while maintaining most performance
codegen-units = 16    # Parallelize codegen for faster builds
strip = true

[profile.dev]
opt-level = 0
debug = true
incremental = true

# Speed up dependency compilation in debug mode
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
# Optional: use a faster linker if available (mold/lld)
# This usually requires environment variables or .cargo/config.toml
